--- a/src/components/viewsdr/viewSdrData.css
+++ b/src/components/viewsdr/viewSdrData.css
@@ -16,7 +16,6 @@
 }
 
 .sdr-status-grid {
-    width: 190%;
     margin-left: 15px;
     margin-bottom: 10px;
     .sdr-status-title {
